<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/create_day_counter_dialog"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dialog"
            android:padding="@dimen/dialog_padding"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/AppDialogEdittextContainer">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_day_counter_name"
                    style="@style/AppDialogEdittext"
                    android:hint="@string/name_hint"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
                android:id="@+id/day_counter_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/priority"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/priority_day_counter_seek_bar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_marginBottom="10dp"
                android:max="4"
                android:progress="1"/>
        <Button
                android:id="@+id/save_day_counter"
                android:text="@string/save"
                style="@style/AppDialogButton"/>
        <Button
                android:id="@+id/cancel_day_counter_dialog"
                android:text="@string/cancel"
                style="@style/AppDialogButton"/>
    </LinearLayout>
</ScrollView>