...
                        android:id="@+id/log_button"
                        android:layout_width="0dp"
                        android:layout_weight="15"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_outline_receipt_24px"/>
                <ImageView
                        android:id="@+id/delete_button"
                        android:layout_width="0dp"
                        android:layout_weight="15"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_outline_clear_24px"/>
            </LinearLayout>
            <LinearLayout
...
