<resources>
    <string name="app_name">MoneyControl</string>
    <string name="action_settings">Settings</string>
    <string name="create_money">Create new money</string>
    <string name="add">add</string>
    <string name="name_hint">name</string>
    <string name="amount_hint">Amount</string>
    <string name="limit_date_hint">Limit date</string>
    <string name="priority">priority</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="money_bag">Creating money bag</string>
    <string name="name_error">Please introduce a name</string>
    <string name="date_error">Please introduce a date</string>
    <string name="amount_error">Please introduce the amount value</string>
    <string name="header_text">"Number of items %s"</string>
    <string name="loading_list_text">Loading list</string>
    <string name="add_quantity">Add new value</string>
    <string name="save_new_value">add new value</string>
    <string name="delete_money_bag">Delete money bag</string>
    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remaining">Remaining days</string>
    <string name="amount_remaining">Remaining amount</string>
    <string name="creation_date_hint">Creation date</string>
    <string name="create_day_counter">Create day counter</string>
    <string name="days">Days</string>
</resources>
