<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/create_money_amount_dialog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_dialog"
              android:padding="@dimen/dialog_padding"
              android:orientation="vertical">

...
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
            android:id="@+id/save_money_amount"
            android:text="@string/save_new_value"
            style="@style/AppDialogButton"/>

    <Button
            android:id="@+id/cancel_edit_dialog"
            android:text="@string/cancel"
...
